fix($browser): fixed the overflowed text in mobile devices

--- a/src/scss/molecules/text-block.scss
+++ b/src/scss/molecules/text-block.scss
@@ -1,10 +1,14 @@
 .TextBlock {
   display: block;
-  max-width: $text-block-max-width;
+  max-width: $text-block-max-width / 2;
   vertical-align: middle;
 
   @include media (small) {
     display: inline-block;
+  }
+
+  @include media (medium) {
+    max-width: $text-block-max-width;
   }
 
   &-pageHeadline {
